Fix vertical spacing and general sizing; add size breakpoints

--- a/public/index.html
+++ b/public/index.html
@@ -13,20 +13,24 @@
 </head>
 
 <body>
-	<section id="main" class="section">
+	<section class="section">
 		<div class="container has-text-centered">
 			<div class="columns">
 				<div class="column is-centered is-flex">
-					<figure class="image is-500x500">
-						<img class="is-rounded" src="image/nicholas.jpg">
+					<figure class="image">
+						<img class="is-rounded is-1by1" src="image/nicholas.jpg">
 					</figure>
 				</div>
 			</div>
 
 			<div class="columns">
 				<div class="column">
-					<h1 class="title">Nicholas Hancox</h1>
-					<h3 class="subtitle">Software Engineer</h3>
+					<h1 class="is-size-2-mobile is-size-1-tablet title">
+						Nicholas Hancox
+					</h1>
+					<h2 class="is-size-4-mobile is-size-3-tablet subtitle">
+						Software Engineer
+					</h2>
 				</div>
 			</div>
 
@@ -34,13 +38,13 @@
 				<div class="column">
 					<a href="https://www.linkedin.com/in/nhancox">
 						<span class="icon icon-list">
-							<i class="icon-li is-size-3"></i>
+							<i class="icon-li is-size-2-mobile is-size-1-tablet"></i>
 						</span>
 					</a>
 
 					<a href="https://github.com/nhancox">
 						<span class="icon icon-list">
-							<i class="icon-gh is-size-3"></i>
+							<i class="icon-gh is-size-2-mobile is-size-1-tablet"></i>
 						</span>
 					</a>
 				</div>
@@ -48,9 +52,14 @@
 		</div>
 	</section>
 
-	<section class="section">
+	<section id="pseudo-footer" class="section">
 		<div class="content has-text-centered">
-			<p>Source code available on <a href="https://github.com/nhancox/nicholashancox.com">GitHub</a></p>
+			<p class="is-size-6-mobile is-size-5-tablet">
+				Source code available on
+				<a href="https://github.com/nhancox/nicholashancox.com">
+					GitHub
+				</a>
+			</p>
 		</div>
 	</section>
 </body>
