Add VueConf attendance notification

--- a/public/index.html
+++ b/public/index.html
@@ -49,12 +49,18 @@
 					</a>
 				</div>
 			</div>
+
+			<div class="is-primary is-size-6-mobile is-size-5-tablet notification">
+				I'm currently attending
+				<a href="https://us.vuejs.org/">VueConf US</a>
+				in Tampa, FL!
+			</div>
 		</div>
 	</section>
 
 	<section id="pseudo-footer" class="section">
-		<div class="content has-text-centered">
-			<p class="is-size-6-mobile is-size-5-tablet">
+		<div class="content has-text-centered is-size-6-mobile is-size-5-tablet">
+			<p>
 				Source code available on
 				<a href="https://github.com/nhancox/nicholashancox.com">
 					GitHub
